--- a/apps/mobile-frontend/src/styles/globals.css
+++ b/apps/mobile-frontend/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    height: 100vh;
+    width: 100vw;
+}
+
+#__next{
+    height: 100%;
+    width: 100%;
+}
